# mr_ediscovery

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  agents.py  consolidated_report.md  docker-compose.yml  format_report.py  models.py  prompts.py  pyproject.toml  requirements.txt
agent_tests/: conftest.py  test_aggregation.py  test_batching.py  test_models.py
